--- a/SkiNet/UI/src/app/layout/header/header.component.html
+++ b/SkiNet/UI/src/app/layout/header/header.component.html
@@ -2,9 +2,9 @@
     <div class="flex align-middle items-center justify-between max-w-screen-2xl mx-auto">
         <img src="/images/logo.png" alt="app logo" class="max-h-16">
         <nav class="flex gap-3 my-2 uppercase text-xl">
-            <a>Home</a>
-            <a>Shop</a>
-            <a>Contact</a>
+            <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Home</a>
+            <a routerLink="/shop" routerLinkActive="active">Shop</a>
+            <a >Contact</a>
         </nav>
         <div class="flex gap-3 align-middle">
             <a matBadge="5" matBadgeSize="large" class="custom-badge mt-2 mr-2">
